Todays work with AST incremental dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /RCD_scripter/target/
+/jjtree_example/nbproject/private/
+/jjtree_example/build/
+/jjtree_example/dist/
+/jjtree_ex3/target/
+/RCD_scripter3/target/
