--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ RCD_scripter3/src/main/java/org/thingml/rcd_scripter3/parser/RcdScript3ParserTre
 RCD_scripter3/src/main/java/org/thingml/rcd_scripter3/parser/SimpleCharStream.java
 RCD_scripter3/src/main/java/org/thingml/rcd_scripter3/parser/Token.java
 RCD_scripter3/src/main/java/org/thingml/rcd_scripter3/parser/TokenMgrError.java
+*.stmp
