--- a/RCD_scripter3/pom.xml
+++ b/RCD_scripter3/pom.xml
@@ -96,6 +96,14 @@
     </build>
 
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
